css/Oldgame.css
#OldGamesDiv .left_div {
	float	:	left;
	width	:	170px;
}
	
#OldGamesDiv img {
	margin-right	: 3mm;
	margin-left		: 2mm;
}

#OldGamesDiv .botao {
	margin-top		: 3mm;
	margin-right	: 0mm;
}

#OldGamesDiv .italic {
		font-style		: italic;
}

#OldGamesDiv .result {
	text-align	:	left;
	margin-bottom	:	3mm;
}

#OldGamesDiv #FormDiv {
	padding-top	:	6mm;
}

#OldGamesDiv #SelectDiv {
	text-align : center;
	position	: relative;
	margin-bottom	:	3mm;
}

#OldGamesDiv #ButtonsDiv {
	text-align : center;
	position:relative;
	margin-top	:	8mm;
}

#OldGamesDiv #ResultDiv #TableDiv {
	text-align : center;
}

#OldGamesDiv #ResultDiv #THeadDiv {
	width:	125mm;
	background-color: #EAF5F4;
	border : solid thin;
	border-color: Teal;
	text-align : left;
}

#OldGamesDiv #ResultDiv #TBodyDiv {
	width: 125mm;
	border : solid thin;
	border-color: Teal;
	overflow-x : hidden;
	overflow-y : auto;
	max-height: 20mm;
	border-top-width: 0mm;
	border-bottom-width: 0mm;
}

#OldGamesDiv #ResultDiv {
	padding-left : 6mm;
	padding-bottom: 4mm;
	padding-top: 3mm;
}

#OldGamesDiv #ResultDiv #TFootDiv {
	width:	125mm;
	border : solid thin;
	border-color: Teal;
	text-align : center;
	padding-top:1mm;
	padding-bottom:2mm;
	border-top-width: 0mm;
}

#OldGamesDiv #ResultDiv #TFootDiv .page {
	margin-left : 3mm;
	margin-right : 3mm;
	font-size: 9px;
	font-weight: normal;
}

#OldGamesDiv #ResultDiv #TFootDiv .button {
	font-size: 9px;
	font-weight: normal;
	margin: 0mm 0mm 0mm 0mm;
	width: 55px;
	border-color : #EAF5F4;
}

#OldGamesDiv #ResultDiv #TFootDiv hr {
	height			: 1px;
	margin			: 2.5mm 4mm 2mm 3mm;
	background-color: #FFA200;
	border			: 0px;
}

#OldGamesDiv #ResultDiv .button {
	bottom: 0px;
}

#OldGamesDiv #ResultDiv #TFootDiv .button_disabled {
	border-color : #C0C0C0;
	background-color: #C0C0C0;
	font-size: 9px;
	font-weight: normal;
	margin: 0mm 0mm 0mm 0mm;
	width: 55px;
}

#OldGamesDiv #Layer1Div {
	margin-bottom	:	4mm;
	padding-left : 22mm;
}

#OldGamesDiv #Layer2Div {
	padding-left : 22mm;
}

#OldGamesDiv .pieces_span {
	font-size	:	14px;
	font-weight	:	normal;
}

#OldGamesDiv .header {
	background-color: #EAF5F4;
	font-weight		: bold;
	font-size	:	12px;
}

#OldGamesDiv tbody,
#OldGamesDiv table {
	display			: block;
	width			: 100%; 
	position		: relative;
	border-collapse	: collapse;
	empty-cells		: show;
}

#OldGamesDiv th, 
#OldGamesDiv td {
	border			: 1px solid #216778;
	font 			: 10px Trebuchet MS;
	color			: #216778;
	background-color: #FFF;
	text-align		: center;
}

#OldGamesDiv p {
	font 			: bold 12px Trebuchet MS;
	color			: #216778;
}

#OldGamesDiv span {
	font 			: bold 12px Trebuchet MS;
	color			: #216778;
	padding-right	:	4px;
}

#OldGamesDiv input {
	margin-right	:	4px;
	margin-top		:	3mm;
	padding-left	:	2px;
}
#OldGamesDiv input,
#OldGamesDiv select {
	border-color : #FFA200;
}

#OldGamesDiv .player1header {
	position: relative;
	margin-left: 4mm;
	font-size: 13px;
	font-weight: bold;
}
#OldGamesDiv .player2header {
	position: relative;
	margin-left: 4mm;
	font-size: 13px;
	font-weight: bold;
}
#OldGamesDiv .dateheader {
	position: relative;
	margin-left: 8mm;
	font-size: 13px;
	font-weight: bold;
}
#OldGamesDiv .catheader {
	position: relative;
	margin-left: 10mm;
	font-size: 13px;
	font-weight: bold;
}
#OldGamesDiv .resultheader {
	position: relative;
	margin-left: 16mm;
	font-size: 13px;
	font-weight: bold;
}

#OldGamesDiv .player1td,
#OldGamesDiv .player2td {
	width: 15%;
}

#OldGamesDiv .datetd {
	width: 12%;
}

#OldGamesDiv .cattd {
	width: 18%;
}

#OldGamesDiv .resulttd {
	width : 26%;
}

